--- a/bundles/org.openhab.binding.bluetooth/pom.xml
+++ b/bundles/org.openhab.binding.bluetooth/pom.xml
@@ -3,6 +3,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
+  <dependencies>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 
   <parent>
     <groupId>org.openhab.addons.bundles</groupId>
